# Chik.Exams/src/Modules/Class/Models/Class.cs
@@ -1,0 +1,11 @@
+namespace Chik.Exams;
+
+public record Class(
+    int Id,
+    string Name,
+    DateTime CreatedAt,
+    DateTime? UpdatedAt
+)
+{
+    public record Create(string Name);
+}
