# Chik.Exams/src/Modules/Users/Models/Student.cs
@@ -1,0 +1,5 @@
+namespace Chik.Exams;
+
+public record Student(
+    Class Class
+);
