# Chik.Exams/src/Modules/Users/Models/Teacher.cs
@@ -1,0 +1,5 @@
+namespace Chik.Exams;
+
+public record Teacher(
+    List<Class> Classes
+);
